Fix spacing

--- a/src/styles/popup/view/passphrase.less
+++ b/src/styles/popup/view/passphrase.less
@@ -21,7 +21,7 @@
         span {
             .test-ellipsis();
 
-            margin: 0 4px;
+            margin: 0 3px;
         }
     }
 
